[gd_scene load_steps=4 format=2]

[ext_resource path="res://circle.png" type="Texture" id=1]
[ext_resource path="res://MobileJoystick.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[node name="MobileJoystick" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
modulate = Color( 0.133333, 0.133333, 0.133333, 0.705882 )
position = Vector2( 24, 208 )
normal = ExtResource( 1 )
shape = SubResource( 1 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="."]
modulate = Color( 0.133333, 0.133333, 0.133333, 0.705882 )
position = Vector2( 488, 208 )
normal = ExtResource( 1 )
shape = SubResource( 1 )

[node name="InnerCircle" type="Sprite" parent="."]
visible = false
modulate = Color( 0.0431373, 0.0431373, 0.0431373, 0.901961 )
position = Vector2( 88, 272 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="InnerCircle2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.0431373, 0.0431373, 0.0431373, 0.901961 )
position = Vector2( 552, 272 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
